--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-toastify": "^11.0.5",
     "three": "^0.180.0",
     "uuid": "^13.0.0"
   },
