--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "19.1.0",
     "react-toastify": "^11.0.5",
     "three": "^0.180.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
