--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "update-sw": "node scripts/update-sw-config.js"
   },
   "dependencies": {
     "@google/genai": "1.18.0",
