--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "twilio": "^4.23.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^3.1.0"
